--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -22,23 +22,23 @@ steps:
         '--build-arg',
         '_NEXT_PUBLIC_PROJECT_ID=$PROJECT_ID',
         '--build-arg',
-        '_NEXT_PUBLIC_VERTEX_API_LOCATION=${_NEXT_PUBLIC_VERTEX_API_LOCATION}',
+        '_NEXT_PUBLIC_VERTEX_API_LOCATION=europe-west1',
         '--build-arg',
-        '_NEXT_PUBLIC_GCS_BUCKET_LOCATION=${_NEXT_PUBLIC_GCS_BUCKET_LOCATION}',
+        '_NEXT_PUBLIC_GCS_BUCKET_LOCATION=europe-west1',
         '--build-arg',
-        '_NEXT_PUBLIC_GEMINI_MODEL=${_NEXT_PUBLIC_GEMINI_MODEL}',
+        '_NEXT_PUBLIC_GEMINI_MODEL=gemini-1.5-flash-001',
         '--build-arg',
         '_NEXT_PUBLIC_SEG_MODEL=${_NEXT_PUBLIC_SEG_MODEL}',
         '--build-arg',
-        '_NEXT_PUBLIC_EDIT_ENABLED=${_NEXT_PUBLIC_EDIT_ENABLED}',
+        '_NEXT_PUBLIC_EDIT_ENABLED=false',
         '--build-arg',
-        '_NEXT_PUBLIC_PRINCIPAL_TO_USER_FILTERS=${_NEXT_PUBLIC_PRINCIPAL_TO_USER_FILTERS}',
+        '_NEXT_PUBLIC_PRINCIPAL_TO_USER_FILTERS=chetana.yin@gmail.com',
         '--build-arg',
-        '_NEXT_PUBLIC_OUTPUT_BUCKET=${_NEXT_PUBLIC_OUTPUT_BUCKET}',
+        '_NEXT_PUBLIC_OUTPUT_BUCKET=cykt-imgstudio-output',
         '--build-arg',
-        '_NEXT_PUBLIC_TEAM_BUCKET=${_NEXT_PUBLIC_TEAM_BUCKET}',
+        '_NEXT_PUBLIC_TEAM_BUCKET=cykt-imgstudio-library',
         '--build-arg',
-        '_NEXT_PUBLIC_EXPORT_FIELDS_OPTIONS_URI=${_NEXT_PUBLIC_EXPORT_FIELDS_OPTIONS_URI}',
+        '_NEXT_PUBLIC_EXPORT_FIELDS_OPTIONS_URI=gs://cykt-imgstudio-export-config/export-fields-options.json',
         '.',
       ]
 images:
